// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logger 1`] = `
<div>
  <h5>
    Logger
  </h5>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn inc"
      type="button"
    >
      +
    </button>
    <button
      class="btn dec"
      type="button"
    >
      -
    </button>
  </div>
</div>
`;

exports[`Logger 2`] = `
<div>
  <h5>
    Logger
  </h5>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn inc"
      type="button"
    >
      +
    </button>
    <button
      class="btn dec"
      type="button"
    >
      -
    </button>
  </div>
  <div
    class="list-group"
  >
    <button
      class="list-group-item"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;

exports[`Logger 3`] = `
<div>
  <h5>
    Logger
  </h5>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn inc"
      type="button"
    >
      +
    </button>
    <button
      class="btn dec"
      type="button"
    >
      -
    </button>
  </div>
  <div
    class="list-group"
  >
    <button
      class="list-group-item"
      type="button"
    >
      2
    </button>
    <button
      class="list-group-item"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;

exports[`Logger 4`] = `
<div>
  <h5>
    Logger
  </h5>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn inc"
      type="button"
    >
      +
    </button>
    <button
      class="btn dec"
      type="button"
    >
      -
    </button>
  </div>
  <div
    class="list-group"
  >
    <button
      class="list-group-item"
      type="button"
    >
      1
    </button>
    <button
      class="list-group-item"
      type="button"
    >
      2
    </button>
    <button
      class="list-group-item"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;

exports[`Logger 5`] = `
<div>
  <h5>
    Logger
  </h5>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn inc"
      type="button"
    >
      +
    </button>
    <button
      class="btn dec"
      type="button"
    >
      -
    </button>
  </div>
  <div
    class="list-group"
  >
    <button
      class="list-group-item"
      type="button"
    >
      1
    </button>
    <button
      class="list-group-item"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;
